@@ -7,12 +7,9 @@ import com.intellij.openapi.fileChooser.FileChooser;
 import com.intellij.openapi.fileChooser.FileChooserDescriptor;
 import com.intellij.openapi.project.Project;
 import com.intellij.openapi.vfs.VirtualFile;
-import org.jetbrains.annotations.SystemIndependent;
 
-import java.io.IOException;
 import java.nio.file.*;
 import java.util.Arrays;
-import java.util.List;
 import java.util.Objects;
 
 public class ChangeDocRootAction extends AnAction {
@@ -26,12 +23,11 @@ public class ChangeDocRootAction extends AnAction {
 
         VirtualFile[] virtualFiles = FileChooser.chooseFiles(
                 new FileChooserDescriptor(false, true, false, false, false, false),
-                project,
-                null
+                project, null
         );
 
         Path docRoot = Arrays.stream(virtualFiles).map(VirtualFile::getPath).findFirst()
-                .map(p -> Path.of(p)).orElse(Path.of(Objects.requireNonNull(project).getBasePath()));
+                .map(p -> Paths.get(p)).orElse(Paths.get(Objects.requireNonNull(Objects.requireNonNull(project).getBasePath())));
 
         project.getComponent(GitBookSummaryGenerator.class).setDocRoot(docRoot);
     }
